asoc-87641 - fix issue where meta wrapped in recon under packets (#6484)

--- a/recon/app/styles/recon/base/event-detail/packets/_header.scss
+++ b/recon/app/styles/recon/base/event-detail/packets/_header.scss
@@ -27,7 +27,8 @@
   &.is-sticky {
     .packet-details {
       box {
-        @include rsa-word-wrap();
+        white-space: nowrap;
+        margin-right: rsa-whitespace(less);
       }
     }
   }
